# new-10x-engineer

./: .gitignore  CLAUDE.md  EXERCISES.md  MASTER_PLAN.md  PLAN-MONTHS-2-6.md  PROGRESS.md  PROJECTS.md  README.md  REFERENCE.md  ROADMAP.md  START_HERE.md  deep-research-report (1).md  deep-research-report.md  interview_prep_qa.md  study_curriculum.md
blog/: schema-as-eval-spec.md
dsa/: README.md  _template.py
katas/: .pre-commit-config.yaml  LEARNINGS.md  kata_01_pydantic.py  kata_02_async.py  kata_03_ctxmgr.py  kata_04_pytest.py  kata_05_typing.py  main.py  pyproject.toml  tokenize_demo.py
month-1/: FINISH-PLAN.md  README.md  week-1.md  week-2.md  week-3.md  week-4.md
month-1/capstone/qa-api/: .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
month-1/capstone/qa-api/app/: __init__.py  config.py  lifespan.py  logging.py  main.py  observability.py
month-1/capstone/qa-api/app/clients/: http.py  redis.py
month-1/capstone/qa-api/app/providers/: base.py  mock.py  registry.py
month-1/capstone/qa-api/docs/: architecture.md  demo-script.md
month-1/capstone/qa-api/docs/benchmarks/: cache-threshold-sweep.md  qa-api-latency.md
month-1/capstone/qa-api/docs/decisions/: 0001-tooling-choices.md  0002-fastapi-project-structure.md  0003-provider-adapter-pattern.md  0004-semantic-cache-design.md  0005-cloud-run-deployment-target.md
month-1/capstone/qa-api/tests/: test_app.py
month-2/: README.md  (+4 more)
month-2/capstone/rag-api/: .env.example  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
month-2/capstone/rag-api/alembic/: env.py
month-2/capstone/rag-api/alembic/versions/: 001_initial_schema.py  002_add_chunk_ordering_constraint.py
month-2/capstone/rag-api/app/: config.py  lifespan.py  logging.py  main.py  observability.py
month-2/capstone/rag-api/app/api/routes/: retrieval.py
month-2/capstone/rag-api/app/clients/: http.py  redis.py
month-2/capstone/rag-api/app/db/: models.py  session.py
month-2/capstone/rag-api/app/providers/: __init__.py
month-2/capstone/rag-api/app/schemas/: retrieval.py
month-2/capstone/rag-api/app/services/ingest/: loaders.py  normalization.py  service.py  splitters.py  types.py
month-2/capstone/rag-api/benchmarks/: __init__.py  run_retrieval_eval.py
month-2/capstone/rag-api/benchmarks/configs/: smoke.yaml
month-2/capstone/rag-api/datasets/seed_corpus/: README.md
month-2/capstone/rag-api/deploy/cloudrun/: job.yaml  service.yaml
month-2/capstone/rag-api/docs/: architecture.md  demo-script.md  research-sources.md
month-2/capstone/rag-api/docs/benchmarks/: chunking-sweep.md  latency.md  retrieval-quality.md
month-2/capstone/rag-api/docs/decisions/: 0001-pgvector-first.md  0002-hybrid-retrieval-rrf.md  0003-reranking-interface.md  0004-evaluation-metrics.md  0005-graph-rag-deferred.md
month-2/capstone/rag-api/scripts/: db_sanity_check.py  ingest_cli.py
month-2/capstone/rag-api/tests/: conftest.py  test_db.py  test_ingest.py  test_migrations.py
projects/business-classification-pipeline/: DESIGN.md  README.md  annotator.py  api.py  bulk_save_notes.py  clean_descriptions.py  failure-taxonomy.md  filter_traces.py  judge_v1.py  judge_v2.py  leadlens_v01.py  main.py  merge_golden.py  pyproject.toml  runner_v01.py
projects/business-classification-pipeline/data/: golden-jds.jsonl  jd-metrics.jsonl  jd-outputs.jsonl  jds-v0-expansion.jsonl  jds-v0.jsonl  judge-v1-outputs.jsonl  judge-v2-outputs.jsonl  notes.jsonl  traces-week-1.jsonl
projects/business-classification-pipeline/docs/: design.md
(+171 files in other folders)
