[project]
name = "business-classification-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.8.0",
    "instructor>=1.15.1",
    "jsonref>=1.1.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
]
